// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`onLogout() method should get initials given a username 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    currentUser={
      Object {
        "additionalUserInfo": Object {
          "profile": Object {
            "name": "My Name",
            "picture": "image",
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction] {
          "calls": Array [
            Array [
              "/login",
            ],
          ],
          "results": Array [
            Object {
              "isThrow": false,
              "value": undefined,
            },
          ],
        },
      }
    }
    removeCurrentUser={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "isThrow": false,
            "value": undefined,
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="brand"
        >
          <a
            href="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </a>
        </div>,
        <div
          className="pills"
        >
          <div
            className="nav-links "
          >
            <div>
              <a
                href="/dashboard"
              >
                Dashboard
              </a>
            </div>
          </div>
          <div
            className="nav-links "
          >
            <a
              href="/"
            >
              Automations
            </a>
          </div>
          <div
            className="user-info-container"
            data-toggle="signout-dropdown-toggler"
            onClick={[Function]}
          >
            <div
              className="current-user"
              data-toggle="signout-dropdown-toggler"
            >
              <div
                className="user-name"
                data-initials="MN"
                data-name="My Name"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="image-container"
                data-toggle="signout-dropdown-toggler"
              >
                <img
                  alt="user-icon"
                  className="user-image"
                  data-toggle="signout-dropdown-toggler"
                  src="image"
                />
              </div>
            </div>
            <div
              className="caret-down"
              data-toggle="signout-dropdown-toggler"
            >
              <i
                className="fa fa-caret-down"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="signout-dropdown-parent"
              >
                <div
                  className="signout-dropdown"
                >
                  <button
                    className="logout-button"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-sign-out-alt"
                    />
                    <span>
                      Sign Out
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
      "id": "header",
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </a>,
          "className": "brand",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>,
              <span
                className="text"
              >
                ESA
              </span>,
            ],
            "href": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="Andela Logo"
                  src="/logo.png"
                />,
                "className": "header-logo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Andela Logo",
                  "src": "/logo.png",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ESA",
                "className": "text",
              },
              "ref": null,
              "rendered": "ESA",
              "type": "span",
            },
          ],
          "type": "a",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="nav-links "
            >
              <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>
            </div>,
            <div
              className="nav-links "
            >
              <a
                href="/"
              >
                Automations
              </a>
            </div>,
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="MN"
                  data-name="My Name"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="image"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "className": "pills",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/dashboard"
                >
                  Dashboard
                </a>,
                "className": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Dashboard",
                  "href": "/dashboard",
                },
                "ref": null,
                "rendered": "Dashboard",
                "type": "a",
              },
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/"
              >
                Automations
              </a>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Automations",
                "href": "/",
              },
              "ref": null,
              "rendered": "Automations",
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="MN"
                    data-name="My Name"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="image"
                    />
                  </div>
                </div>,
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>,
              ],
              "className": "user-info-container",
              "data-toggle": "signout-dropdown-toggler",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="user-name"
                      data-initials="MN"
                      data-name="My Name"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="image"
                      />
                    </div>,
                  ],
                  "className": "current-user",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "user-name",
                      "data-initials": "MN",
                      "data-name": "My Name",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="image"
                      />,
                      "className": "image-container",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "alt": "user-icon",
                        "className": "user-image",
                        "data-toggle": "signout-dropdown-toggler",
                        "src": "image",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "img",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>,
                  ],
                  "className": "caret-down",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-caret-down",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>,
                      "className": "signout-dropdown-parent",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>,
                        "className": "signout-dropdown",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <i
                              className="fa fa-sign-out-alt"
                            />,
                            <span>
                              Sign Out
                            </span>,
                          ],
                          "className": "logout-button",
                          "onClick": [Function],
                          "type": "button",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "className": "fa fa-sign-out-alt",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "i",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Sign Out",
                            },
                            "ref": null,
                            "rendered": "Sign Out",
                            "type": "span",
                          },
                        ],
                        "type": "button",
                      },
                      "type": "div",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="brand"
          >
            <a
              href="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </a>
          </div>,
          <div
            className="pills"
          >
            <div
              className="nav-links "
            >
              <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>
            </div>
            <div
              className="nav-links "
            >
              <a
                href="/"
              >
                Automations
              </a>
            </div>
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials="MN"
                  data-name="My Name"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <img
                    alt="user-icon"
                    className="user-image"
                    data-toggle="signout-dropdown-toggler"
                    src="image"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
        "id": "header",
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </a>,
            "className": "brand",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="header-logo"
                >
                  <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />
                </div>,
                <span
                  className="text"
                >
                  ESA
                </span>,
              ],
              "href": "/",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />,
                  "className": "header-logo",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "Andela Logo",
                    "src": "/logo.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ESA",
                  "className": "text",
                },
                "ref": null,
                "rendered": "ESA",
                "type": "span",
              },
            ],
            "type": "a",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="nav-links "
              >
                <div>
                  <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                </div>
              </div>,
              <div
                className="nav-links "
              >
                <a
                  href="/"
                >
                  Automations
                </a>
              </div>,
              <div
                className="user-info-container"
                data-toggle="signout-dropdown-toggler"
                onClick={[Function]}
              >
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials="MN"
                    data-name="My Name"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <img
                      alt="user-icon"
                      className="user-image"
                      data-toggle="signout-dropdown-toggler"
                      src="image"
                    />
                  </div>
                </div>
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>,
            ],
            "className": "pills",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                </div>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>,
                  "className": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Dashboard",
                    "href": "/dashboard",
                  },
                  "ref": null,
                  "rendered": "Dashboard",
                  "type": "a",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/"
                >
                  Automations
                </a>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Automations",
                  "href": "/",
                },
                "ref": null,
                "rendered": "Automations",
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="current-user"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <div
                      className="user-name"
                      data-initials="MN"
                      data-name="My Name"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <img
                        alt="user-icon"
                        className="user-image"
                        data-toggle="signout-dropdown-toggler"
                        src="image"
                      />
                    </div>
                  </div>,
                  <div
                    className="caret-down"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>,
                ],
                "className": "user-info-container",
                "data-toggle": "signout-dropdown-toggler",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="user-name"
                        data-initials="MN"
                        data-name="My Name"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="image-container"
                        data-toggle="signout-dropdown-toggler"
                      >
                        <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="image"
                        />
                      </div>,
                    ],
                    "className": "current-user",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "user-name",
                        "data-initials": "MN",
                        "data-name": "My Name",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <img
                          alt="user-icon"
                          className="user-image"
                          data-toggle="signout-dropdown-toggler"
                          src="image"
                        />,
                        "className": "image-container",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "alt": "user-icon",
                          "className": "user-image",
                          "data-toggle": "signout-dropdown-toggler",
                          "src": "image",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "img",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="fa fa-caret-down"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="signout-dropdown-parent"
                      >
                        <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>
                      </div>,
                    ],
                    "className": "caret-down",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-caret-down",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>,
                        "className": "signout-dropdown-parent",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>,
                          "className": "signout-dropdown",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <i
                                className="fa fa-sign-out-alt"
                              />,
                              <span>
                                Sign Out
                              </span>,
                            ],
                            "className": "logout-button",
                            "onClick": [Function],
                            "type": "button",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "className": "fa fa-sign-out-alt",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "i",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Sign Out",
                              },
                              "ref": null,
                              "rendered": "Sign Out",
                              "type": "span",
                            },
                          ],
                          "type": "button",
                        },
                        "type": "div",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`should render as expected 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Header
    currentUser={
      Object {
        "additionalUserInfo": Object {
          "profile": Object {
            "name": "",
            "picture": "",
          },
        },
      }
    }
    history={
      Object {
        "push": [MockFunction],
      }
    }
    removeCurrentUser={[MockFunction]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="brand"
        >
          <a
            href="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </a>
        </div>,
        <div
          className="pills"
        >
          <div
            className="nav-links "
          >
            <div>
              <a
                href="/dashboard"
              >
                Dashboard
              </a>
            </div>
          </div>
          <div
            className="nav-links "
          >
            <a
              href="/"
            >
              Automations
            </a>
          </div>
          <div
            className="user-info-container"
            data-toggle="signout-dropdown-toggler"
            onClick={[Function]}
          >
            <div
              className="current-user"
              data-toggle="signout-dropdown-toggler"
            >
              <div
                className="user-name"
                data-initials=""
                data-name=""
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="image-container"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-user-circle"
                  data-toggle="signout-dropdown-toggler"
                />
              </div>
            </div>
            <div
              className="caret-down"
              data-toggle="signout-dropdown-toggler"
            >
              <i
                className="fa fa-caret-down"
                data-toggle="signout-dropdown-toggler"
              />
              <div
                className="signout-dropdown-parent"
              >
                <div
                  className="signout-dropdown"
                >
                  <button
                    className="logout-button"
                    onClick={[Function]}
                    type="button"
                  >
                    <i
                      className="fa fa-sign-out-alt"
                    />
                    <span>
                      Sign Out
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>,
      ],
      "id": "header",
    },
    "ref": [Function],
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <a
            href="/"
          >
            <div
              className="header-logo"
            >
              <img
                alt="Andela Logo"
                src="/logo.png"
              />
            </div>
            <span
              className="text"
            >
              ESA
            </span>
          </a>,
          "className": "brand",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>,
              <span
                className="text"
              >
                ESA
              </span>,
            ],
            "href": "/",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <img
                  alt="Andela Logo"
                  src="/logo.png"
                />,
                "className": "header-logo",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "Andela Logo",
                  "src": "/logo.png",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "ESA",
                "className": "text",
              },
              "ref": null,
              "rendered": "ESA",
              "type": "span",
            },
          ],
          "type": "a",
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="nav-links "
            >
              <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>
            </div>,
            <div
              className="nav-links "
            >
              <a
                href="/"
              >
                Automations
              </a>
            </div>,
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials=""
                  data-name=""
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-user-circle"
                    data-toggle="signout-dropdown-toggler"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>,
          ],
          "className": "pills",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/dashboard"
                >
                  Dashboard
                </a>,
                "className": undefined,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Dashboard",
                  "href": "/dashboard",
                },
                "ref": null,
                "rendered": "Dashboard",
                "type": "a",
              },
              "type": "div",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <a
                href="/"
              >
                Automations
              </a>,
              "className": "nav-links ",
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Automations",
                "href": "/",
              },
              "ref": null,
              "rendered": "Automations",
              "type": "a",
            },
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials=""
                    data-name=""
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-user-circle"
                      data-toggle="signout-dropdown-toggler"
                    />
                  </div>
                </div>,
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>,
              ],
              "className": "user-info-container",
              "data-toggle": "signout-dropdown-toggler",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <div
                      className="user-name"
                      data-initials=""
                      data-name=""
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <i
                        className="fa fa-user-circle"
                        data-toggle="signout-dropdown-toggler"
                      />
                    </div>,
                  ],
                  "className": "current-user",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "user-name",
                      "data-initials": "",
                      "data-name": "",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <i
                        className="fa fa-user-circle"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      "className": "image-container",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-user-circle",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />,
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>,
                  ],
                  "className": "caret-down",
                  "data-toggle": "signout-dropdown-toggler",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "className": "fa fa-caret-down",
                      "data-toggle": "signout-dropdown-toggler",
                    },
                    "ref": null,
                    "rendered": null,
                    "type": "i",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>,
                      "className": "signout-dropdown-parent",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>,
                        "className": "signout-dropdown",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": Array [
                            <i
                              className="fa fa-sign-out-alt"
                            />,
                            <span>
                              Sign Out
                            </span>,
                          ],
                          "className": "logout-button",
                          "onClick": [Function],
                          "type": "button",
                        },
                        "ref": null,
                        "rendered": Array [
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "className": "fa fa-sign-out-alt",
                            },
                            "ref": null,
                            "rendered": null,
                            "type": "i",
                          },
                          Object {
                            "instance": null,
                            "key": undefined,
                            "nodeType": "host",
                            "props": Object {
                              "children": "Sign Out",
                            },
                            "ref": null,
                            "rendered": "Sign Out",
                            "type": "span",
                          },
                        ],
                        "type": "button",
                      },
                      "type": "div",
                    },
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="brand"
          >
            <a
              href="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </a>
          </div>,
          <div
            className="pills"
          >
            <div
              className="nav-links "
            >
              <div>
                <a
                  href="/dashboard"
                >
                  Dashboard
                </a>
              </div>
            </div>
            <div
              className="nav-links "
            >
              <a
                href="/"
              >
                Automations
              </a>
            </div>
            <div
              className="user-info-container"
              data-toggle="signout-dropdown-toggler"
              onClick={[Function]}
            >
              <div
                className="current-user"
                data-toggle="signout-dropdown-toggler"
              >
                <div
                  className="user-name"
                  data-initials=""
                  data-name=""
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="image-container"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-user-circle"
                    data-toggle="signout-dropdown-toggler"
                  />
                </div>
              </div>
              <div
                className="caret-down"
                data-toggle="signout-dropdown-toggler"
              >
                <i
                  className="fa fa-caret-down"
                  data-toggle="signout-dropdown-toggler"
                />
                <div
                  className="signout-dropdown-parent"
                >
                  <div
                    className="signout-dropdown"
                  >
                    <button
                      className="logout-button"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-sign-out-alt"
                      />
                      <span>
                        Sign Out
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>,
        ],
        "id": "header",
      },
      "ref": [Function],
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <a
              href="/"
            >
              <div
                className="header-logo"
              >
                <img
                  alt="Andela Logo"
                  src="/logo.png"
                />
              </div>
              <span
                className="text"
              >
                ESA
              </span>
            </a>,
            "className": "brand",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <div
                  className="header-logo"
                >
                  <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />
                </div>,
                <span
                  className="text"
                >
                  ESA
                </span>,
              ],
              "href": "/",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <img
                    alt="Andela Logo"
                    src="/logo.png"
                  />,
                  "className": "header-logo",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "Andela Logo",
                    "src": "/logo.png",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
                "type": "div",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "ESA",
                  "className": "text",
                },
                "ref": null,
                "rendered": "ESA",
                "type": "span",
              },
            ],
            "type": "a",
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="nav-links "
              >
                <div>
                  <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                </div>
              </div>,
              <div
                className="nav-links "
              >
                <a
                  href="/"
                >
                  Automations
                </a>
              </div>,
              <div
                className="user-info-container"
                data-toggle="signout-dropdown-toggler"
                onClick={[Function]}
              >
                <div
                  className="current-user"
                  data-toggle="signout-dropdown-toggler"
                >
                  <div
                    className="user-name"
                    data-initials=""
                    data-name=""
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="image-container"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-user-circle"
                      data-toggle="signout-dropdown-toggler"
                    />
                  </div>
                </div>
                <div
                  className="caret-down"
                  data-toggle="signout-dropdown-toggler"
                >
                  <i
                    className="fa fa-caret-down"
                    data-toggle="signout-dropdown-toggler"
                  />
                  <div
                    className="signout-dropdown-parent"
                  >
                    <div
                      className="signout-dropdown"
                    >
                      <button
                        className="logout-button"
                        onClick={[Function]}
                        type="button"
                      >
                        <i
                          className="fa fa-sign-out-alt"
                        />
                        <span>
                          Sign Out
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>,
            ],
            "className": "pills",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <div>
                  <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>
                </div>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": <a
                    href="/dashboard"
                  >
                    Dashboard
                  </a>,
                  "className": undefined,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Dashboard",
                    "href": "/dashboard",
                  },
                  "ref": null,
                  "rendered": "Dashboard",
                  "type": "a",
                },
                "type": "div",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <a
                  href="/"
                >
                  Automations
                </a>,
                "className": "nav-links ",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Automations",
                  "href": "/",
                },
                "ref": null,
                "rendered": "Automations",
                "type": "a",
              },
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <div
                    className="current-user"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <div
                      className="user-name"
                      data-initials=""
                      data-name=""
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="image-container"
                      data-toggle="signout-dropdown-toggler"
                    >
                      <i
                        className="fa fa-user-circle"
                        data-toggle="signout-dropdown-toggler"
                      />
                    </div>
                  </div>,
                  <div
                    className="caret-down"
                    data-toggle="signout-dropdown-toggler"
                  >
                    <i
                      className="fa fa-caret-down"
                      data-toggle="signout-dropdown-toggler"
                    />
                    <div
                      className="signout-dropdown-parent"
                    >
                      <div
                        className="signout-dropdown"
                      >
                        <button
                          className="logout-button"
                          onClick={[Function]}
                          type="button"
                        >
                          <i
                            className="fa fa-sign-out-alt"
                          />
                          <span>
                            Sign Out
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>,
                ],
                "className": "user-info-container",
                "data-toggle": "signout-dropdown-toggler",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <div
                        className="user-name"
                        data-initials=""
                        data-name=""
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="image-container"
                        data-toggle="signout-dropdown-toggler"
                      >
                        <i
                          className="fa fa-user-circle"
                          data-toggle="signout-dropdown-toggler"
                        />
                      </div>,
                    ],
                    "className": "current-user",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "user-name",
                        "data-initials": "",
                        "data-name": "",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "div",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <i
                          className="fa fa-user-circle"
                          data-toggle="signout-dropdown-toggler"
                        />,
                        "className": "image-container",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "fa fa-user-circle",
                          "data-toggle": "signout-dropdown-toggler",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "i",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <i
                        className="fa fa-caret-down"
                        data-toggle="signout-dropdown-toggler"
                      />,
                      <div
                        className="signout-dropdown-parent"
                      >
                        <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>
                      </div>,
                    ],
                    "className": "caret-down",
                    "data-toggle": "signout-dropdown-toggler",
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "fa fa-caret-down",
                        "data-toggle": "signout-dropdown-toggler",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "i",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": <div
                          className="signout-dropdown"
                        >
                          <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>
                        </div>,
                        "className": "signout-dropdown-parent",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": <button
                            className="logout-button"
                            onClick={[Function]}
                            type="button"
                          >
                            <i
                              className="fa fa-sign-out-alt"
                            />
                            <span>
                              Sign Out
                            </span>
                          </button>,
                          "className": "signout-dropdown",
                        },
                        "ref": null,
                        "rendered": Object {
                          "instance": null,
                          "key": undefined,
                          "nodeType": "host",
                          "props": Object {
                            "children": Array [
                              <i
                                className="fa fa-sign-out-alt"
                              />,
                              <span>
                                Sign Out
                              </span>,
                            ],
                            "className": "logout-button",
                            "onClick": [Function],
                            "type": "button",
                          },
                          "ref": null,
                          "rendered": Array [
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "className": "fa fa-sign-out-alt",
                              },
                              "ref": null,
                              "rendered": null,
                              "type": "i",
                            },
                            Object {
                              "instance": null,
                              "key": undefined,
                              "nodeType": "host",
                              "props": Object {
                                "children": "Sign Out",
                              },
                              "ref": null,
                              "rendered": "Sign Out",
                              "type": "span",
                            },
                          ],
                          "type": "button",
                        },
                        "type": "div",
                      },
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromError": true,
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
